--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,11 +7,11 @@
 @layer base {
 	html {
 		@apply scroll-smooth;
+		font-family: 'Poppins', sans-serif;
 	}
 
 	body {
-		@apply bg-[#ecf0f3];
-		@apply bg-gray-50 text-gray-900 dark:bg-[#111827] dark:text-gray-100;
+		@apply bg-neutral-200 text-gray-800 dark:bg-gray-900 dark:text-gray-200;
 	}
 
 	::-webkit-scrollbar {
